support for java 17, next LTS